Cleaned gcc warnings.

--- a/src/sys/Makefile
+++ b/src/sys/Makefile
@@ -1,7 +1,7 @@
 #
 # Make LSI-UNIX system.
 #
-CC		= pdp11-gcc
+CC		= pdp11-gcc -Wall
 AS		= pdp11-as
 LD		= pdp11-ld
 SIZE		= pdp11-size -o
@@ -89,3 +89,30 @@ count:		$(ASRCS) $(CSRCS)
 
 .c.s:
 		$(CC) $(CFLAGS) -S $<
+
+###
+alloc.o: alloc.c param.h systm.h filsys.h buf.h inode.h user.h
+bio.o: bio.c param.h user.h buf.h systm.h proc.h
+clock.o: clock.c param.h systm.h user.h proc.h
+fio.o: fio.c param.h user.h filsys.h file.h inode.h reg.h
+iget.o: iget.c param.h systm.h user.h inode.h filsys.h buf.h
+main.o: main.c param.h user.h systm.h proc.h inode.h
+nami.o: nami.c param.h inode.h user.h systm.h buf.h
+rdwri.o: rdwri.c param.h inode.h user.h buf.h systm.h
+sig.o: sig.c param.h systm.h user.h proc.h inode.h reg.h
+slp.o: slp.c param.h user.h proc.h systm.h file.h inode.h buf.h
+subr.o: subr.c param.h inode.h user.h buf.h systm.h
+sys1.o: sys1.c param.h systm.h user.h proc.h file.h buf.h reg.h inode.h
+sys2.o: sys2.c param.h systm.h user.h reg.h file.h inode.h
+sys3.o: sys3.c param.h systm.h reg.h buf.h filsys.h user.h inode.h file.h
+sys4.o: sys4.c param.h user.h reg.h inode.h systm.h proc.h
+sysent.o: sysent.c param.h systm.h
+trap.o: trap.c param.h systm.h user.h proc.h reg.h
+aedfd.o: dev/aedfd.c param.h buf.h user.h
+decfd.o: dev/decfd.c param.h systm.h buf.h user.h
+kl.o: dev/kl.c param.h user.h systm.h inode.h file.h reg.h tty.h proc.h
+perfd.o: dev/perfd.c param.h buf.h user.h
+rffd.o: dev/rffd.c param.h buf.h user.h
+sykfd.o: dev/sykfd.c param.h buf.h user.h
+tv.o: dev/tv.c param.h user.h systm.h inode.h file.h reg.h tty.h proc.h \
+  dev/screen.h
