--- a/fsutil/Makefile
+++ b/fsutil/Makefile
@@ -1,10 +1,10 @@
 CC		= gcc -g
 CFLAGS		= -O -Wall
-OBJS		= superblock.o inode.o create.o check.o
+OBJS		= superblock.o block.c inode.o create.o check.o file.o
 PROGS		= lsx-util
 
 # For Mac OS X
-#LIBS		= -largp
+LIBS		= -largp
 
 all:		$(PROGS) rxboot rxboot2
 
