Compiler: modified to generate gas-compatible output. Structs caused an error "structure too large". The problem was in incorrect computing of value offsz. Fixed. Enabled long name support. Use ".ascii" assembler directive for strings. Put strings in data section. Align text labels on 2-byte boundary. Casting pointer to int was broken - fixed.
Front end: Adopted for working in cross-compiling mode.
Added a support for .S suffix: run preprocessor and assembler.

Run-time library ported to GAS. All float-point stuff removed.

Optimizer: modified for gnu assembler.

--- a/cross-pcc/cc/Makefile
+++ b/cross-pcc/cc/Makefile
@@ -1,4 +1,4 @@
-CFLAGS		= -O
+CFLAGS		= -O -Wall
 DESTDIR		= /usr/local/bin
 
 all:		pdp11-pcc
@@ -9,5 +9,5 @@ install:	pdp11-pcc
 clean:
 		rm -f *~ *.o pdp11-pcc
 
-pdp11-pcc:	cc.o
-		$(CC) ${LDFLAGS} -o pdp11-pcc cc.o
+pdp11-pcc:	pcc.o
+		$(CC) ${LDFLAGS} -o pdp11-pcc pcc.o
