--- a/cross-pcc/c2/Makefile
+++ b/cross-pcc/c2/Makefile
@@ -1,20 +1,16 @@
-SEPFLAG=-i
-CFLAGS=	-O
+CFLAGS		= -O -g -Wall
+LDFLAGS		= -g
+DESTDIR		= /usr/local/lib/pdp11
 
-DESTDIR=
-LIB=	/lib
+all:		c2
 
-c2: c20.o c21.o
-	cc ${CFLAGS} ${SEPFLAG} -o c2 c20.o c21.o
-
-c20.o c21.o: c2.h
-
-install: c2
-	-mv ${DESTDIR}${LIB}/c2 ${DESTDIR}${LIB}/oc2
-	install -s c2 ${DESTDIR}${LIB}
-
-restore:
-	mv ${DESTDIR}${LIB}/oc2 ${DESTDIR}${LIB}/c2
+install:	c2
+		install -s c2 ${DESTDIR}/c2
 
 clean:
-	rm -f *.o c2
+		rm -f *~ *.o c2
+
+c2:		c20.o c21.o
+		$(CC) ${LDFLAGS} -o c2 c20.o c21.o
+
+c20.o c21.o:	c2.h
