Make USR and SYS sizes in kbytes, not in 2048-byte units.

--- a/src/sys/Makefile
+++ b/src/sys/Makefile
@@ -5,7 +5,7 @@
 # GNU compiler.
 #CC		= pdp11-gcc -Wall
 #CFLAGS		= -Os -fomit-frame-pointer -fno-builtin -I. -DKERNEL -DDEBUG
-LIBS		=
+#LIBS		=
 
 # Johnson's portable compiler.
 CC		= pdp11-pcc
