Added system calls.

--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -1,5 +1,10 @@
 #
-# Compile C standard library.
+# Compile standard C library.
+#
+# System calls alarm() and pause() are not supported.
+# It seems that nobody uses them. The sources are lost.
+# The only way to restore them is extracting from old libc.a
+# and disassembling.
 #
 DESTDIR		= /usr/local/lib/pdp11
 CC		= pdp11-pcc
@@ -10,8 +15,16 @@ CPP		= cpp
 CFLAGS		= -O
 CPPFLAGS	= -I.
 
-SRCS		= crt0.S exit.S
-OBJS		= exit.o sync.o
+SRCS		= crt0.S cerror.S exit.S fork.S read.S write.S \
+		  open.S creat.S close.S wait.S link.S unlink.S \
+		  execv.S execl.S chdir.S time.S mknod.S chmod.S sbrk.S \
+		  stat.S seek.S getpid.S getuid.S stime.S fstat.S \
+		  stty.S gtty.S sync.S dup.S signal.S
+OBJS		= cerror.o exit.o fork.o read.o write.o \
+		  open.o creat.o close.o wait.o link.o unlink.o \
+		  execv.o execl.o chdir.o time.o mknod.o chmod.o sbrk.o \
+		  stat.o seek.o getpid.o getuid.o stime.o fstat.o \
+		  stty.o gtty.o sync.o dup.o signal.o
 
 all:		crt0.o libc.a
 
