Fixed ctime() and vprintf(). Qsort still does not compile yet.

--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -52,14 +52,14 @@ libc.a:		${OBJS}
 		ar cru libc.a ${OBJS}
 
 .S.o:
-		${CPP} -E ${CPPFLAGS} $< | $(AS) -o $@
+		${CC} ${CPPFLAGS} -c $<
 		@${STRIP} -x $*.o
 
 depend:
 		@cp Makefile Makefile~~
 		(sed '/^### DO NOT DELETE THIS LINE/,$$d' Makefile;\
 		echo '### DO NOT DELETE THIS LINE';\
-		gcc -MM $(CPPFLAGS) *.S |\
+		gcc -MM $(CPPFLAGS) *.S *.c |\
 		sed ':1;/\.o: .* \\/{;N;s/ *\\\n */ /;};s/ \/[^ ]*h */ /;t1';\
 		echo '# DEPENDENCIES MUST END AT END OF FILE';\
 		echo '# IF YOU PUT STUFF HERE IT WILL GO AWAY';\
@@ -67,8 +67,56 @@ depend:
 		mv Makefile~ Makefile
 
 ### DO NOT DELETE THIS LINE
-crt0.o: crt0.S
-exit.o: exit.S
+cerror.o: cerror.S
+chdir.o: chdir.S syscall.h
+chmod.o: chmod.S syscall.h
+close.o: close.S syscall.h
+creat.o: creat.S syscall.h
+crt0.o: crt0.S syscall.h
+dup.o: dup.S syscall.h
+execl.o: execl.S syscall.h
+execv.o: execv.S syscall.h
+exit.o: exit.S syscall.h
+fork.o: fork.S syscall.h
+fstat.o: fstat.S syscall.h
+getpid.o: getpid.S syscall.h
+getuid.o: getuid.S syscall.h
+gtty.o: gtty.S syscall.h
+link.o: link.S syscall.h
+mknod.o: mknod.S syscall.h
+open.o: open.S syscall.h
+read.o: read.S syscall.h
+sbrk.o: sbrk.S syscall.h
+seek.o: seek.S syscall.h
+signal.o: signal.S syscall.h
+stat.o: stat.S syscall.h
+stime.o: stime.S syscall.h
+stty.o: stty.S syscall.h
+sync.o: sync.S syscall.h
+time.o: time.S syscall.h
+unlink.o: unlink.S syscall.h
+wait.o: wait.S syscall.h
+write.o: write.S syscall.h
+atoi.o: atoi.c stdlib.h
+ctime.o: ctime.c stdlib.h
+memccpy.o: memccpy.c string.h
+memchr.o: memchr.c string.h
+memcmp.o: memcmp.c string.h
+memcpy.o: memcpy.c string.h
+memset.o: memset.c string.h
+printf.o: printf.c stdlib.h
+qsort-211.o: qsort-211.c stdlib.h
+qsort.o: qsort.c stdlib.h
+strcat.o: strcat.c string.h
+strchr.o: strchr.c string.h
+strcmp.o: strcmp.c string.h
+strcpy.o: strcpy.c string.h
+strlen.o: strlen.c string.h
+strncat.o: strncat.c string.h
+strncmp.o: strncmp.c string.h
+strncpy.o: strncpy.c string.h
+strrchr.o: strrchr.c string.h
+vprintf.o: vprintf.c stdlib.h
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
 # see make depend above
