--- a/cross-pcc/ccom/Makefile
+++ b/cross-pcc/ccom/Makefile
@@ -1,11 +1,12 @@
-CFLAGS		= -O
+CFLAGS		= -O -Wall
 DESTDIR		= /usr/local/lib/pdp11
 
-all:		c0 c1
+all:		c0 c1 c2o
 
-install:	c0 c1
+install:	c0 c1 c2o
 		install -s c0 ${DESTDIR}/c0
 		install -s c1 ${DESTDIR}/c1
+		install -s c2o ${DESTDIR}/c2o
 
 clean:
 		rm -f *~ *.o c0 c1 cvopt table.c
@@ -19,6 +20,11 @@ c1:		c10.o c11.o c12.o c13.o table.o
 		${CC} ${LDFLAGS} -o c1 c10.o c11.o c12.o c13.o table.o
 
 c10.o c11.o c12.o c13.o: c1.h
+
+c2o:		c20.o c21.o
+		${CC} ${LDFLAGS} -o c2o c20.o c21.o
+
+c20.o c21.o: c2.h
 
 table.c:	optable cvopt
 		./cvopt < optable > table.c
