Asm: added "-u" and "-o" options. Symbols starting from '#' to end of line are treated as comment -- needed for compatibility with preprocessor output. Rewritten pdp11-pcc and pdp11-cc for using pdp11-asm.

--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -8,7 +8,7 @@
 #
 DESTDIR		= /usr/local/lib/pdp11
 CC		= pdp11-pcc
-AS		= pdp11-as
+AS		= pdp11-asm
 STRIP		= pdp11-strip
 RANLIB		= pdp11-ranlib
 CPP		= cpp
