Asm: added option -D for debugging - temporary files are not deleted. Added command ".word". Numbers made decimal by default - now compatible with GNU as.
PCC: using jbr, jne etc. ops. Do not use ".ascii" command.

Libc successfully compiled by PCC.

--- a/cross-pcc/pcc/Makefile
+++ b/cross-pcc/pcc/Makefile
@@ -13,7 +13,7 @@
 DESTDIR		= /usr/local/lib/pdp11
 M		= ../mip
 CFLAGS		= -O -g -I. -I$(M) -DONEPASS -DFIXSTRUCT="outstruct" \
-		  -DASSTRINGS -DFLEXNAMES
+		  -DFLEXNAMES
 LDFLAGS 	= -g
 YACC		= byacc
 
