--- a/cross-pcc/cc/Makefile
+++ b/cross-pcc/cc/Makefile
@@ -1,11 +1,11 @@
-CFLAGS		= -O -Wall
-DESTDIR		= /usr/local/bin
+DESTDIR		= /usr/local
+CFLAGS		= -O -Wall -DDESTDIR=\"$(DESTDIR)\"
 
 all:		pdp11-pcc pdp11-cc
 
 install:	pdp11-pcc pdp11-cc
-		install -s pdp11-pcc ${DESTDIR}/pdp11-pcc
-		install -s pdp11-cc ${DESTDIR}/pdp11-cc
+		install -s pdp11-pcc ${DESTDIR}/bin/pdp11-pcc
+		install -s pdp11-cc ${DESTDIR}/bin/pdp11-cc
 
 clean:
 		rm -f *~ *.o pdp11-pcc pdp11-cc
