Disasm: fixed bug in symbol references. Ld: rewritten using stdio, successfully compiled.

--- a/cross-pcc/ld/Makefile
+++ b/cross-pcc/ld/Makefile
@@ -2,18 +2,18 @@ CC		= gcc -g -Wall
 CFLAGS		=
 DESTDIR		= /usr/local
 PROG		= pdp11-size pdp11-strip pdp11-disasm pdp11-reloc \
-		  pdp11-nm #pdp11-ld pdp11-ar
+		  pdp11-nm pdp11-ld #pdp11-ar
 
 all:		$(PROG)
 
 install:	$(PROG)
 		install -s pdp11-size   ${DESTDIR}/bin/pdp11-size
 		install -s pdp11-strip  ${DESTDIR}/bin/pdp11-strip
+		install -s pdp11-disasm ${DESTDIR}/bin/pdp11-disasm
 		install -s pdp11-reloc  ${DESTDIR}/bin/pdp11-reloc
+		install -s pdp11-nm     ${DESTDIR}/bin/pdp11-nm
 		install -s pdp11-ld     ${DESTDIR}/bin/pdp11-ld
 		install -s pdp11-ar     ${DESTDIR}/bin/pdp11-ar
-		install -s pdp11-nm     ${DESTDIR}/bin/pdp11-nm
-		install -s pdp11-disasm ${DESTDIR}/bin/pdp11-disasm
 
 clean:
 		rm -f *~ *.o $(PROG)
@@ -31,6 +31,9 @@ pdp11-disasm:	disasm.o
 		$(CC) $(LDFLAGS) -o $@ $<
 
 pdp11-nm:	nm.o
+		$(CC) $(LDFLAGS) -o $@ $<
+
+pdp11-ld:	ld.o
 		$(CC) $(LDFLAGS) -o $@ $<
 
 depend:
