As pcc does support argument types in function declarations, but cc does not, we need PARAMS() macro. Added ansidecl.h file to libc. Now, libc is successfully compiled by both cc and pcc.
Ar: added "c" option - do not print warning when creating archive.

Cc: added support for new format of cpp output "#" directives.

Front-ends cc and pcc: stylistic changes to make sources look similar.

--- a/cross-pcc/ccom/Makefile
+++ b/cross-pcc/ccom/Makefile
@@ -1,5 +1,5 @@
 DESTDIR		= /usr/local
-CFLAGS		= -O -Wall -DDESTDIR=\"$(DESTDIR)\"
+CFLAGS		= -O -g -Wall -DDESTDIR=\"$(DESTDIR)\"
 
 all:		c0 c1 c2o
 
@@ -9,7 +9,7 @@ install:	c0 c1 c2o
 		install -s c2o ${DESTDIR}/lib/pdp11/c2o
 
 clean:
-		rm -f *~ *.o c0 c1 cvopt table.c
+		rm -f *~ *.o c0 c1 c2o cvopt table.c
 
 c0:		c00.o c01.o c02.o c03.o c04.o c05.o
 		${CC} ${LDFLAGS} -o c0 c00.o c01.o c02.o c03.o c04.o c05.o
