Fixed bug in ld.c: incorrect reading of ar header. We have no ranlib, so for simplicity I added iterative linking of an archive. Successfully linked /bin/sync.
Added sources of "hello world".

Removed "setd" instruction from crt0.s.

Disasm: fixed printing negative offsets.
Added printing .bss section.

Asm: increased size of symbol table, /bin/ls now compiles fine.

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -3,16 +3,18 @@
 #CFLAGS		= -Os -fomit-frame-pointer -fno-builtin -I../libc
 
 # Johnson's portable compiler.
-CC		= pdp11-pcc -v
+CC		= pdp11-pcc
 CFLAGS		= -I../libc
 
 # Using GNU binutils.
 AS		= pdp11-as
 LD		= pdp11-ld
 SIZE		= pdp11-size -o
-LDFLAGS		=
+LDFLAGS		= -a$(TOPSYS) -X /usr/local/lib/pdp11/crt0.o
+LIBS		= -L/usr/local/lib/pdp11 -lc -lcrt
 
-PROGS		= sync ls sh
+TOPSYS		= 040000
+PROGS		= hello sync #ls sh
 # TODO: check cp date ed mkdir mv od rm rmdir size strip stty
 
 all:		$(PROGS)
@@ -20,8 +22,9 @@ all:		$(PROGS)
 clean:
 		rm -f *~ *.o a.out $(PROGS)
 
-#sh:		sh.o
-#		$(CC) $(LDFLAGS) $< -o $@
+%: %.o
+		$(LD) $(LDFLAGS) -o $@ $^ $(LIBS)
+		pdp11-disasm -b$(TOPSYS) $@ > $@.dis
 
 .c.s:
 		$(CC) $(CFLAGS) -S $<
@@ -42,17 +45,18 @@ cp.o: cp.c
 cpfp.o: cpfp.c
 date.o: date.c
 ed.o: ed.c
-ls.o: ls.c ../libc/unistd.h
+hello.o: hello.c ../libc/stdlib.h ../libc/ansidecl.h
+ls.o: ls.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/string.h ../libc/unistd.h ../libc/time.h
 mkdir.o: mkdir.c
 mv.o: mv.c
 od.o: od.c
 rm.o: rm.c
 rmdir.o: rmdir.c
-sh.o: sh.c ../libc/unistd.h
+sh.o: sh.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h
 size.o: size.c
-strip.o: strip.c
+strip.o: strip.c ../libc/a.out.h
 stty.o: stty.c
-sync.o: sync.c ../libc/unistd.h
+sync.o: sync.c ../libc/unistd.h ../libc/ansidecl.h
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
 # see make depend above
